Revision history for String-ToIdentifier-EN

0.04  2011-10-17 14:12:40
    - preserve capitalization of original string

0.03  2011-10-10 22:10:58
    - minor changes

0.02  2011-10-06 10:17:00
    - improve Unicode char translation algorithm

0.01  2011-10-06 00:19:00
    - Initial version.